//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'CASE_MANAGER']
  role_id Int [not null]
  cases Case [not null]
  case_access Case_access [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Client {
  id String [pk]
  first_name String [not null]
  last_name String [not null]
  dob DateTime [not null]
  email String [unique, not null]
  phone String [not null]
  address String [not null]
  cases Case [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Case {
  id String [pk]
  client Client [not null]
  client_id String [not null]
  case_manager User [not null]
  case_manager_id String [not null]
  status String [not null]
  openedAt DateTime [default: `now()`, not null]
  closedAt DateTime
  tasks Task [not null]
  case_access Case_access [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Case_access {
  id String [pk]
  user User [not null]
  user_id String [not null]
  case Case [not null]
  case_id String [not null]
  access_level Access_level [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Task {
  id String [pk]
  case Case [not null]
  case_id String [not null]
  description String [not null]
  due_date DateTime [not null]
  is_complete Boolean [not null]
  completed_at DateTime
}

Enum Role {
  ADMIN
  MANAGER
  CASE_MANAGER
}

Enum Access_level {
  VIEW_ONLY
  MANAGE
}

Ref: Case.client_id > Client.id

Ref: Case.case_manager_id > User.id

Ref: Case_access.user_id > User.id

Ref: Case_access.case_id > Case.id

Ref: Task.case_id > Case.id